tests/parser/bad/lib/lmodule-library-cid-with.scillib
library TestLib

(* Should be 'type' *)

Type House =
| Kind of String
